syntax = "proto3";

import "dag.proto";
import "request.proto";

package graphlearn;

service GraphLearn {
  rpc HandleOp (OpRequestPb) returns (OpResponsePb) {}
  rpc HandleStop (StopRequestPb) returns (StatusResponsePb) {}
  rpc HandleReport (StateRequestPb) returns (StatusResponsePb) {}

  rpc HandleDag (DagDef) returns (StatusResponsePb) {}
  rpc HandleDagValues (DagValuesRequestPb) returns (DagValuesResponsePb) {}
}
